# zxing-demo

./: .gitignore  CMakeLists.txt  README.md  binding.gyp  common.gypi  package.json
docs/: dom.js  emnapi.min.js  index.html  index.js  zxingwasm.d.ts  zxingwasm.js  zxingwasm.wasm
script/: clean.js  copy.js
src/: Matrix.cpp  Matrix.hpp  binding.cpp  predef.h  zxing.d.ts
test/: index.js  zxing.d.ts
